--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React app</title>
+    <title>Three column Grid</title>
   </head>
   <body>
     <noscript>
       <p>you need to enable javascript</p>
     </noscript>
-    <div id="root"></div>
+    <main id="root"></main>
   </body>
 </html>
